# DND-AI

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.cargo/: config.toml
foundry-module/: module.json
foundry-module/scripts/: bridge.js
foundry_agent_studio/: __init__.py  __main__.py  app.py  bridge_rolls.py  combat_context.py  constants.py  db.py  memory_gates.py  ollama_catalog.py  ollama_client.py  paths.py  piper_catalog.py  piper_synth.py  state.py  voice_binaries.py  voice_paths.py  web_fetch.py
foundry_agent_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
foundry_agent_studio/data/: __init__.py  piper_voice_catalog.txt
foundry_agent_studio/voices/: README.txt
foundry_agent_studio/whisper_models/: README.txt
src/: App.tsx  api.ts  constants.ts  styles.css
src/audio/: mockProviders.ts  piperScaffold.ts  recordWav.ts  types.ts  whisperScaffold.ts
